# Griffin-Trace

./: .gitignore  .gitmodules  DOCUMENTATION.md  README.md
arch/x86/kernel/: pt.c
griffin-tests/: README.md  annotate-forward-edge.sh  annotate-shadow-stack.sh  attack-call.c  attack-return.c  forward-edge.sh  shadow-stack.sh
mm/: mmap.c
tools/pt/: Makefile  blame.c  blame.h  pt.c  pt.h
tools/pt/extras/fpt-llvm-pass/: CMakeLists.txt  README.md  fpt.cpp
tools/pt/extras/policy-generation/: README.md  generate_policy.py
tools/pt/extras/samples/: forward-edge.sh  shadow-stack.sh
